--- a/frontend-upcife/src/routes/Home.css
+++ b/frontend-upcife/src/routes/Home.css
@@ -16,7 +16,7 @@
 }
 
 .text{
-  font-size: medium ;
+  font-size: larger;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: rgb(104, 104, 104);
   display: inline;
